--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "angular": "~1.3.0",
     "moment": "~2.8.3",
     "angular-bootstrap": "~0.11.0",
-    "bootstrap": "~3.3.0"
+    "bootstrap": "~3.3.0",
+    "ng-scrollbar": "~0.0.7"
   }
 }
